src/objects/WorkflowRuleAction__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>Update Field</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Insert Related Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Label__c</fullName>
        <description>name for the action</description>
        <label>Action Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Object__c</fullName>
        <label>Action Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Emails__c</fullName>
        <label>Additional Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Relationship_Name__c</fullName>
        <label>Child Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrossObjectField__c</fullName>
        <inlineHelpText>Cross Object Field Notation :  Relationshipname.FieldName. Eg:- Account.Type</inlineHelpText>
        <label>Cross Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTemplateName__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Folder__c</fullName>
        <label>Email Template Folder</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Field_API_Name__c</fullName>
        <defaultValue>&quot;Id&quot;</defaultValue>
        <description>store the external field on which upsert will happen</description>
        <label>External Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Value__c</fullName>
        <label>Long Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notified_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notified User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workflow_Rule_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Owner_Id__c</fullName>
        <label>User/Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Rule__c</fullName>
        <label>Workflow Rule</label>
        <referenceTo>WorkflowRule__c</referenceTo>
        <relationshipName>Workflow_Rule_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workflow Rule Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Reference_Id__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Workflow_Rule__c</columns>
        <columns>Action_Object__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Action #{0000}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Send_Email_Template_Req</fullName>
        <active>true</active>
        <description>when the action is send email template is required</description>
        <errorConditionFormula>AND( ISPICKVAL(ActionType__c , &apos;Send Email&apos;), ISBLANK(  Email_Template__c  ))</errorConditionFormula>
        <errorMessage>Please select the email template</errorMessage>
    </validationRules>
</CustomObject>